package org.example;

public interface ServicioMeteorologico {

  double getTemperatura(String ciudad);

}
