package org.example.guardaropa;

public enum EstadoPropuesta {
  PENDIENTE, ACEPTADA, RECHAZADA
}
