package org.example.prenda;

public enum Color {
  BLANCO, NEGRO, GRIS, ROJO, NARANJA, AMARILLO, VERDE, AZUL, CELESTE, VIOLETA, ROSA
}
