package org.example.prenda;

public enum Formalidad {
  FORMAL, NEUTRO, INFORMAL
}
