package org.example.prenda;

public enum Material {
  ALGODON, LANA, JEAN, CUERO
}
