package org.example.prenda;

public class RangoDeTemperaturas {
  private double temperaturaMayor;
  private double temperaturaMenor;

  public RangoDeTemperaturas(double temperaturaMayor, double temperaturaMenor) {
    this.temperaturaMayor = temperaturaMayor;
    this.temperaturaMenor = temperaturaMenor;
  }

  public boolean contiene(double temperatura) {
    return (temperatura < temperaturaMayor
      && temperatura > temperaturaMenor);
  }
}
