package org.example.prenda;

public enum Trama {
  LISA, RAYADA, LUNARES, CUADROS, ESTAMPADO
}
